[package]
name = "noxfutura"
version = "0.3.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"

[dependencies]
futures-lite = "1.11"
egui = "0.11"
epi = "0.11"
egui_wgpu_backend = "0.7"
egui_winit_platform = "0.6"
wgpu = "0.8"
winit = "0.24"
lazy_static = "1.4"
parking_lot = "0.11"
shaderc = "0.7.2"
bytemuck = "1.5"
image = "0.23"
bracket-random = "0.8"
bracket-noise = "0.8"

[profile.dev]
opt-level = 1

[profile.release]
#lto = "thin"
#debug = true # Disable when not profiling
