[package]
name = "noxfutura"
version = "0.3.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"

[dependencies]
bevy = "0.5"
# This never works for me!
#bevy = { version = "0.5.0", features = ["dynamic"] }
bevy_egui = "0.6"
bracket-random = "0.8"
bevy_tilemap = "0.4.0"

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1