[package]
name = "noxfutura"
version = "0.3.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"

[dependencies]
bevy = "0.5"
# This never works for me!
#bevy = { version = "0.5.0", features = ["dynamic"] }
bevy_egui = "0.6"
bracket-random = "0.8"
bracket-noise = "0.8"
lazy_static = "1.4"
parking_lot = "0.11"
serde = "1.0"
ron = "0.6"
Inflector = "0.11"
bincode = "1.3.1"
miniz_oxide = "0.4.4"
bevy_simple_tilemap = "0.5"
smallvec = "1.6"
futures-lite = "1.12"

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1