[package]
name = "bengine"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[dependencies]
wgpu = "0.6.0"
winit = { version = "0.22.2", features = ["web-sys"] }
futures = { version = "0.3" }
imgui = "0.5.0"
imgui-winit-support = { version = "0.5", default-features = false, features = [ "winit-22" ] }
bytemuck = "1.4.0"
smallvec = "1.5.0"
image = "0.23.8"
failure = "0.1"
shaderc = "0.7.2"
lazy_static = "1.4.0"
parking_lot = "0.11.0"
dot_vox = "4.1.0"
bracket-random = "0.8.0"
bracket-geometry = { version = "0.8.1", features = ["serde"] }
bracket-noise = "0.8.1"
ultraviolet = "0.7.4"