[package]
name = "nox_planet"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nox_raws = { path = "../nox_raws" }
nox_components = { path = "../nox_components" }
nox_wgpu_utils = { path = "../nox_wgpu_utils" }
legion = { git = "https://github.com/TomGillen/legion", features = [ "serialize" ]}
bracket-random = { version = "0.8.0", default-features = false }
serde = { version = "1.0.114" }
bracket-geometry = { version = "0.8.1", features = ["serde"] }
bincode = "1.3.1"
miniz_oxide = "0.4.0"
lazy_static = "1.4.0"
parking_lot = "0.11.0"
bracket-noise = "0.8.1"
ultraviolet = "0.4.6"
flate2 = "1.0.16"
byteorder = "1.3.4"
bracket-color = { version = "0.8.1", features = ["rex", "serde"] }
