[package]
name = "nox_planet"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bengine = { path = "../bengine/" }
nox_spatial = { path = "../nox_spatial/" }
nox_raws = { path = "../nox_raws/" }
nox_components = { path = "../nox_components" }
serde = { version = "1.0.115" }
lazy_static = "1.4.0"
parking_lot = "0.11.0"
flate2 = "1.0.17"
byteorder = "1.3.4"
bracket-color = { version = "0.8.1", features = ["rex", "serde"] }
legion = { version = "0.3.1", features = [ "serialize" ] }
smallvec = "1.5.0"
bincode = "1.3.1"
miniz_oxide = "0.4.1"
