[package]
name = "nox_raws"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
parking_lot = "0.11.0"
serde = { version = "1.0.114" }
ron = "0.6.0"
bracket-random = { version = "0.8.0", default-features=false }
Inflector = "0.11.4" # You just had to be clever with a capital letter
