[package]
name = "nox_raws"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bengine = { path = "../bengine/" }
lazy_static = "1.4.0"
parking_lot = "0.12"
serde = { version = "1.0.115" }
ron = "0.6.1"
Inflector = "0.11.4" # You just had to be clever with a capital letter
