[package]
name = "nox_wgpu_utils"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
parking_lot = "0.11.0"
wgpu = { version = "0.5.0" }
imgui = "0.4.0"
imgui-wgpu = "0.7.0"
imgui-winit-support = { version = "0.4", default-features = false, features = [ "winit-22" ] }
winit = { version = "0.22.2", features = ["web-sys"] }
bytemuck = "1.2.0"
image = "0.23.6"
failure = "0.1"
glsl-to-spirv = "0.1.7"
