[package]
name = "nox_components"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bengine = { path = "../bengine/" }
nox_spatial = { path = "../nox_spatial/" }
nox_raws = { path = "../nox_raws/" }
serde = { version = "1.0.115" }
legion = { version = "0.3.1", features = [ "serialize" ] }
ron = "0.6.1"
lazy_static = "1.4.0"
parking_lot = "0.11.0"
