[package]
name = "nox_utils"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nox_raws = { path = "../nox_raws" }
nox_spatial = { path = "../nox_spatial" }
nox_planet = { path = "../nox_planet" }
bengine = { path = "../bengine" }